--- a/Test02/Views/KeToan/ChinhsuCN.cshtml
+++ b/Test02/Views/KeToan/ChinhsuCN.cshtml
@@ -8,80 +8,164 @@
     ViewBag.cn = "active";
     ViewBag.nd = "Chỉnh sửa phiếu công nợ";
 }
+<link href="~/Content/KeToan/formketoan.css" rel="stylesheet" />
+<div class="container-sm">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="tile" id="body">
+                @{
+                    DateTime ngay = (DateTime)(Model.NgayLapCN);
+                    int thang = ngay.Month;
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="tile">
-            <div style="text-align:center">
-                <h4 >Phiếu Công nợ @Model.MaCongNo</h4>
-                <p>
-                    <strong>Mã công nợ:</strong>
-                    @Html.DisplayFor(model => model.MaCongNo);
-                </p>
-            </div>
-           
+                    var daily = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
+                    var loaidaily = db.LoaiDLs.Where(s => s.MaLoaiDL == daily.MaLoaiDL).FirstOrDefault();
+                }
 
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.MaCongNo)
-                @Html.HiddenFor(model => model.MaDL)
-                @Html.HiddenFor(model => model.TienNo)
-
-                
-                <p><strong>Mã đại lý:</strong> @Html.DisplayFor(model => model.MaDL)</p>
-                <p>
-                    <strong>Tên đại lý:</strong> @{ var madh = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
-                    }
-                    @Html.DisplayFor(model => madh.TenDL);
-                </p>
-                
-                <p>
-                    <strong>Tiền nợ:</strong> @{ var ThanhTien = string.Format("{0:0,0 vnđ}", Model.TienNo);}
-                    @Html.DisplayFor(modelItem => ThanhTien)
-                </p>
-                <div class="form-horizontal">
-                    <strong>Hạn trả: </strong>
-                    <div class="form-group">
-                        @*@Html.LabelFor(model => model.HanTra, htmlAttributes: new { @class = "control-label col-md-2" }*@
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.HanTra, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.HanTra, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <strong>Trạng thái thanh toán:</strong>
-                    <div class="form-group">
-                        @*@Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" }*@
-                        <div class="col-md-10">
-                            <select class="form-control" id="TrangThai" name="TrangThai">
-                                <option selected="@Model.TrangThai">@Model.TrangThai</option>
-                                <option>Chưa thanh toán</option>
-                                <option>Đã thanh toán</option>
-                            </select>
-                            @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <strong>Ngày lập công nợ:</strong>
-                    <div class="form-group">
-                        @*@Html.LabelFor(model => model.NgayLapCN, htmlAttributes: new { @class = "control-label col-md-2" }*@
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.NgayLapCN, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.NgayLapCN, "", new { @class = "text-danger" })
-                        </div>
+                <div style="padding:20px">
+                    <div style="text-align:center">
+                        <h4>PHIẾU CÔNG NỢ</h4>
+                        <p> <strong>Ngày: </strong>@Html.DisplayFor(model => model.NgayLapCN)</p>
+                        <p> <strong>Mã công nợ: </strong>@Html.DisplayFor(model => model.MaCongNo)</p>
                     </div>
 
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Lưu" class="btn btn-default" />
+
+                    <p> <strong>Tên đại lý: </strong>@Html.DisplayFor(model => daily.TenDL)</p>
+                    <p> <strong>Loại đại lý: </strong>@Html.DisplayFor(model => loaidaily.MaLoaiDL)</p>
+                    <p> <strong>Địa chỉ: </strong>@Html.DisplayFor(model => daily.DiaChi)</p>
+                    <p> <strong>Phiếu công nợ tháng: </strong>@thang</p>
+                    <p> <strong>Hạn trả: </strong>@Html.DisplayFor(model => model.HanTra)</p>
+
+
+
+
+
+                    @{ var tongien = string.Format("{0:0,0 vnđ}", Model.TienNo);}
+                    <p> <strong>Thành tiền: </strong>@Html.DisplayFor(model => tongien)</p>
+
+
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                                @*//Phần render từng dòng trong C#*@
+                                <thead>
+                                    <tr role="row" style="text-align:center">
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã đơn hàng</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Ngày lập</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Địa điểm giao hàng</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 120px;">Thành tiền</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{ var total = 0;
+                                        List<DonHang> donhang = db.DonHangs.Where(s => s.MaDL == Model.MaDL).ToList();
+                                    }
+                                    @foreach (var item in donhang)
+                                    {
+                                        DateTime t = (DateTime)item.NgayLap;
+                                        int thangitem = t.Month;
+                                        if (thang == thangitem)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.MaDH)
+                                                </td>
+
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.NgayLap)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.DiemGiao)
+                                                </td>
+
+
+                                                <td>
+                                                    @{ total += Convert.ToInt32(item.TongTien);}
+                                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
+                                                    @Html.DisplayFor(modelItem => ThanhTien)
+
+                                                </td>
+
+                                            </tr>
+                                        }
+                                    }
+                                    <tr>
+                                        <th colspan="3">Tổng cộng tiền nợ:</th>
+                                        @{ var TongCong = string.Format("{0:0,0 vnđ}", total);}
+                                        <td>@Html.DisplayFor(modelItem => TongCong)</td>
+                                    </tr>
+                            </table>
                         </div>
                     </div>
+
+                    <div class="row>
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.MaCongNo)
+                            @Html.HiddenFor(model => model.MaDL)
+                            @Html.HiddenFor(model => model.TienNo)
+
+
+                            <div class="form-group col-sm-6">
+                                <strong>Hạn trả: </strong>
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.HanTra, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.HanTra, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+
+
+                            <div class="form-group col-sm-6">
+                                <strong>Ngày lập công nợ:</strong>
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.NgayLapCN, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.NgayLapCN, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group col-sm-12">
+                                <strong>Trạng thái thanh toán:</strong>
+                                @*@Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" }*@
+                                <div class="col-md-10">
+                                    <select class="form-control" id="TrangThai" name="TrangThai">
+                                        <option selected="@Model.TrangThai">@Model.TrangThai</option>
+                                        <option>Chưa thanh toán</option>
+                                        <option>Đã thanh toán</option>
+                                    </select>
+                                    @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Lưu" class="btn btn-default" />
+                                </div>
+                            </div>
+
+                        }
+                    </div>
+
+
+
+
+
                 </div>
-            }
-
-            <div>
-                @Html.ActionLink("Quay lại danh sách công nợ", "QLCongno")
             </div>
         </div>
     </div>
+ 
 </div>
+
+<script>
+    //In dữ liệu
+    var myApp = new function () {
+        this.printTable = function () {
+            var tab = document.getElementById('body');
+            var win = window.open('', '', 'height=800px,width=1200px');
+            win.document.write(tab.outerHTML);
+            win.document.close();
+            win.print();
+        }
+    }
+</script>
